*** empty log message ***

--- a/help/general/screen_layout.html
+++ b/help/general/screen_layout.html
@@ -8,16 +8,19 @@
     The main window contains a menu bar, toolbar, module list, status bar, and a pane where new and existing items can be viewed.
 
 	<h2>Menu bar</h2>
-	The menu bar provides access to all the functionality available for the currently active module.
+	The <a href="../general/menubar.html">menu bar</a> provides quick access to all the functionality available for the currently active module.
 
 	<h2>Tool bar</h2>
-	The tool bar provides shortcuts to all the same functionality as the menu bar. You can disable the text labels by right-clicking on the toolbar and selecting "Show labels".
+	The <a href="../general/toolbar.html">tool bar</a> provides shortcuts to all the same functionality as the menu bar.
 	
-	<h2>Module list</h2>
-	The module list shows the modules you can work with. You can switch between modules at any time (even during imports). The active module is highlighted.<br>
-
-	<img src="./images/view_modulelist.jpg" alt="" border="0">
-
+	<h2>Module bar</h2>
+	The module bar shows the modules you can work with. You can switch between modules at any time (even during imports). 
+    The active module is highlighted.<br>
+	<img src="./images/view_modulelist.jpg" alt="" border="0"><br><br>
+    Some modules have sub modules assigned to them. For example, the movies module has a sub module called actors. 
+    Click on the small bar at the bottom of the module button, called "Select Module". This will allow you to select any of the sub modules.<br>
+    <img src="./images/menubar_submodule.png" alt="" border="0"><br>
+    
 	<h2>Grouping pane</h2>
 	Allows for grouping the items. <a href="grouping_pane.html">more about this.</a>
 
@@ -27,7 +30,8 @@
 	<img src="./images/view_itemtab.jpg" alt="" border="0">
 
 	<h2>New item tab </h2>
-	Add new items to Data Crow. New items can be imported from the internet or extracted from files or CD drives. <br>
+	Unsaved, new items are added here. New items can be imported from the internet or extracted from files or CD drives.
+    Additionally you can quickly add new items from here yourself. You can find an explanation <a href="../items/inserting.html">here</a>.<br>
 
 	<img src="./images/view_newitemtab.jpg" alt="" border="0">
 
