--- a/help/items/itemform.html
+++ b/help/items/itemform.html
@@ -79,7 +79,20 @@
     <h2>Read file information</h2>
     To read the information from a movie file, a music file, etc go to the "file" menu and select "Read file information". If the item already has a filename defined, the information from that file is (re-) read. Otherwise a dialog is opened which allows you to browse for the file from which you want the information to be read. Data Crow will read the information from the file and update the values in the item form. 
 
-    <h1>Loan administration</h1>
+
+	<h3>Images</h3>
+    Each image of an item is shown in a separate tab. Images can be exported, edited, added, deleted or replaced via these tabs. 
+    To add or replace an image select for example "Add from File" from the "File" menu and browse for the specific image. 
+    To save the image to disk select "save as". <br>
+    Via the "edit" menu an image can edited or deleted. There are several options for editing such as rotating and sharpening.
+
+    <h2>Related Items</h2>
+    The related items tab shows which items have a relationship with this item. In the example below we are looking at the software category Adventure. 
+    This category has been assigned to a number of items among which Simon the Sorcerer 2. You can double-click the item to open it. 
+    
+    <br><img src="./images/itemform_references.png" alt="" border="0"><br><br>
+    
+    <h2>Loan administration</h2>
     Read <a href="../loan/loan.html">this</a> for more help.
 
   </body>
