--- a/help/general/screen_layout.html
+++ b/help/general/screen_layout.html
@@ -13,8 +13,8 @@
 	<h2>Tool bar</h2>
 	The <a href="../general/toolbar.html">tool bar</a> provides shortcuts to all the same functionality as the menu bar.
 	
-	<h2>Module bar</h2>
-	The module bar shows the modules you can work with. You can switch between modules at any time (even during imports). 
+	<h2>Module list</h2>
+	The module list shows the modules you can work with. You can switch between modules at any time (even during imports). 
     The active module is highlighted.<br>
 	<img src="./images/view_modulelist.jpg" alt="" border="0"><br><br>
     Some modules have sub modules assigned to them. For example, the movies module has a sub module called actors. 
