--- a/help/tools/fileinformationimport.html
+++ b/help/tools/fileinformationimport.html
@@ -4,12 +4,15 @@
   </head>
   <body>
 
-    <h1>Importing File Information</h1>
-    <i>Menu path: Tools &gt; "Item name" File Import </i><br><br>
+    <h1>File Import</h1>
+    <i>Menu path: Tools &gt; "Item Name" File Import </i><br><br>
 
 	Using the import feature you can quickly retrieve information from
   	the CD-Rom or hard drive. This feature is found in the &#8220;Tools&#8221; menu and
-  	has the name &#8216;X import&#8217; (where X is the module name).
+  	has the name &#8216;"Item Name" File Import&#8217; (where "Item Name" is the module name, such as Movie or Audio CD).
+    <br><br>
+    <b>Note:</b> This tool is not to be confused with the ability of Data Crow to import items from 
+    text files. Use the <a href="../tools/item_import.html">Item Importer</a> to import items from a CSV, text or XML file.
 
 	<h1>Directories / Files</h1>
 	Here you can select the files to import. <br>
