*** empty log message ***

--- a/help/general/quickview.html
+++ b/help/general/quickview.html
@@ -35,9 +35,20 @@
     <h2>Options</h2>
     Right-click on the quick view to bring up the options menu.
     <br><img src="./images/quickview_options.png" alt="" border="0"><br><br>
-    The option "Toggle Quick View" will hide the quick view. It can be enabled from within the <a href="../general/menubar.html">view menu</a>.<br>
-    With the "Quick View Settings" you can pick and select the fields you want to be part of the quick view details tab as well as some other settings.
-    This is explained <a href="../settings/quickview.html">here</a>.
+    
+    <table>
+        </td></tr>
+        <tr><td><img src="./images/tb_toggle.png" alt="" border="0"></td>
+        <td><a href="../general/quickview.html">Toggle Quick View</a>. 
+        The option "Toggle Quick View" will hide the quick view. 
+        It can be enabled from within the <a href="../general/menubar.html">view menu</a> when you have disabled it.
+        </td></tr> 
+        <tr><td><img src="./images/tb_settings.png" alt="" border="0"></td>
+        <td><a href="../settings/quickview.html">Quick View Settings</a>. 
+        The <a href="../general/quickview.html">quick view</a> can be modified to your desires. 
+        Here you can indicate which fields should be shown and in which order. 
+        </td></tr>         
+    </table>
     
 </body>
 </html>
