--- a/help/general/screen_layout.html
+++ b/help/general/screen_layout.html
@@ -31,7 +31,7 @@
 
 	<h2>New item tab </h2>
 	Unsaved, new items are added here. New items can be imported from the internet or extracted from files or CD drives.
-    Additionally you can quickly add new items from here yourself. You can find an explanation <a href="../items/inserting.html">here</a>.<br>
+    Additionally you can quickly add new items from here yourself. You can find an explanation <a href="../general/views.html">here</a>.<br>
 
 	<img src="./images/view_newitemtab.jpg" alt="" border="0">
 
