--- a/help/general/toolbar.html
+++ b/help/general/toolbar.html
@@ -33,6 +33,10 @@
         Deletes all selected items (in the view) from the database. This cannot be reverted (only by restoring a backup).
         </td></tr>
         <tr><td><img src="./images/tb_save.png" alt="" border="0"></td>
+        <td><a href="../items/views.html">Save</a>.
+        The table view allows you to edit the items directly in the view. Use this option to save the selected item only.
+        </td></tr>        
+        <tr><td><img src="./images/tb_saveall.png" alt="" border="0"></td>
         <td><a href="../items/views.html">Save all</a>.
         The table view allows you to edit the items directly in the view. To save all changes you have made you can use the 
         save all menu option.
