*** empty log message ***

--- a/help/general/menubar.html
+++ b/help/general/menubar.html
@@ -80,15 +80,15 @@
         </td></tr>
     </table>      
     
-    <h2>Maintenance</h2>
+    <h2>Administration</h2>
     
     <table>
         <tr><td><img src="./images/tb_administration.png" alt="" border="0"></td>
-        <td><a href="../items/administration.html">Administration</a>. 
+        <td><a href="../items/administration.html">Maintain</a>. 
         Most modules make use of drop downs or multi-reference fields. An example is the state field for 
         software items. 
         This state field has a default set of values. You can modify this list, completely. The administration
-        of these items (we call them property items, part of property modules) can be maintained in the 
+        of these items (we call them property items, part of property modules) can be done from within the 
         administration menu.
         </td></tr>
         <tr><td><img src="./images/tb_loan.png" alt="" border="0"></td>
