--- a/help/general/quickview.html
+++ b/help/general/quickview.html
@@ -45,7 +45,7 @@
         </td></tr> 
         <tr><td><img src="./images/tb_settings.png" alt="" border="0"></td>
         <td><a href="../settings/quickview.html">Quick View Settings</a>. 
-        The <a href="../general/quickview.html">quick view</a> can be modified to your desires. 
+        The quick view can be modified to your desires. 
         Here you can indicate which fields should be shown and in which order. 
         </td></tr>         
     </table>
