--- a/help/items/views.html
+++ b/help/items/views.html
@@ -8,7 +8,7 @@
     <i>Menu path: View</i><br><br>
     
     A view is an area in Data Crow where items are represented. Currently there are two views, a 
-    <a href="../items/views_tableview.html">Table View</a> and a <a href="./views_table.html">Card View</a>. 
+    <a href="../items/views_tableview.html">Table View</a> and a <a href="./views_cardview.html">Card View</a>. 
     The views available can differ per module. The Container module does not have the table view available
     for example. Custom made modules will by default have both modules available to them.
     
