*** empty log message ***

--- a/help/general/menubar.html
+++ b/help/general/menubar.html
@@ -64,7 +64,7 @@
     
     <table>
         <tr><td><img src="./images/tb_log.png" alt="" border="0"></td>
-        <td><a href="../general/log.html">TBD Show Log</a>.
+        <td><a href="../general/log.html">Show Log</a>.
         The log shows events, things that happened in the system. If something went wrong, Data Crow will 
         log an error here. Always a good place to look if you are having issues. It will also show informative 
         messages, "I did this at this and this time".<br>
